--- a/module-1/lab-generators-functions/your-code/main.ipynb
+++ b/module-1/lab-generators-functions/your-code/main.ipynb
@@ -35,9 +35,35 @@
    "outputs": [],
    "source": [
     "def summation(num):\n",
+    "    \n",
+    "    i=1\n",
+    "    while i <num:\n",
+    "        i +=i\n",
+    "    return i\n",
+    "\n",
     "    # This function returns 1+2+3+....+num\n",
     "    \n",
     "    # Your code here:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "128\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print(summation(num))"
    ]
   },
   {
@@ -55,7 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "array=[3, 8, 16]"
+    "array=[3, 8, 16]\n"
    ]
   },
   {
@@ -65,9 +91,32 @@
    "outputs": [],
    "source": [
     "def summation2(*args):\n",
-    "    # This function returns the sum of *args\n",
-    "    \n",
-    "    # Your code here:"
+    "    s=0\n",
+    "    for i in args:\n",
+    "        s+=i\n",
+    "    return s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "27"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "summation2(*array)"
    ]
   },
   {
@@ -80,13 +129,39 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
+    "a= 'a'\n",
+    "b= 'b'\n",
+    "c= 'c'\n",
+    "\n",
     "def summation3(a, b, c):\n",
+    "    return a+b+c\n",
     "    # This function returns a+b+c\n",
-    "    \n",
-    "    # Your code here:"
+    "    # Your code here:\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "abc\n"
+     ]
+    }
+   ],
+   "source": [
+    "summation3(a,b,c)\n",
+    "print(summation3(a,b,c))"
    ]
   },
   {
@@ -102,19 +177,60 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dictionary={'red':3, 'blue':8, 'green':24, 'orange':12, 'purple':10}"
+    "dictionary={'red':3, 'blue':8, 'green':24, 'orange':12, 'purple':10}\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "57"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(dictionary.values())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def summation4(**kwargs):\n",
-    "    # This function returns the sum of all M&Ms, except the red ones\n",
-    "    \n",
-    "    # Your code here:"
+    "    print('sum:',b+c+d+e)\n",
+    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'kwargs' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-12-ce199a56ef0b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msummation4\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'kwargs' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "summation4(**kwargs)"
    ]
   },
   {
@@ -126,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -139,14 +255,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def summation5(.....):\n",
-    "    # This function returns the sum of a,b,c,d and e\n",
-    "    # You need to define the function input\n",
-    "    # Your code here:"
+    "def summation5(*args, **kwargs):\n",
+    "    s_args= 0\n",
+    "    s_kwargs=0\n",
+    "    for i in args:\n",
+    "        s_args+=i\n",
+    "    for v in kwargs.values():\n",
+    "        s_kwargs +=v\n",
+    "    return s_args+s_kwargs\n",
+    "\n",
+    "summation5(a,b,c,*d,**e)\n"
    ]
   },
   {
@@ -160,17 +282,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# We first define our iterator:\n",
     "\n",
@@ -183,17 +297,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# We continue to iterate through the iterator.\n",
     "\n",
@@ -202,38 +308,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(next(iterator))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "StopIteration",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mStopIteration\u001b[0m                             Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-18-91070dc82d50>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# After we have iterated through all elements, we will get a StopIteration Error\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mnext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0miterator\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mStopIteration\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# After we have iterated through all elements, we will get a StopIteration Error\n",
     "\n",
@@ -243,7 +329,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
     "# We can also iterate through an iterator using a for loop like this:\n",
@@ -265,20 +353,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def divisible2(iterator):\n",
-    "    # This function takes an iterable and returns the first element that is divisible by 2 and zero otherwise\n",
-    "    # Input: Iterable\n",
-    "    # Output: Integer\n",
-    "    \n",
-    "    # Sample Input: iter([1,2,3])\n",
-    "    # Sample Output: 2\n",
-    "    \n",
-    "    # Your code here:\n",
-    "    "
+    "    for i in iterator:\n",
+    "        if i %2 ==0:\n",
+    "            return i\n",
+    "        else:\n",
+    "            continue\n",
+    "        return 0\n",
+    "iterator = iter([1,2,3])\n",
+    "divisible2(iterator)"
    ]
   },
   {
@@ -371,7 +469,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
