--- a/module-1/lab-lambda-functions/your-code/main.ipynb
+++ b/module-1/lab-lambda-functions/your-code/main.ipynb
@@ -34,18 +34,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-2-4136287181e5>, line 5)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-4136287181e5>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    for x in ####:\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "l = [######]\n",
-    "f = lambda x: #define the lambda expression\n",
+    "l = list(range(1,11))\n",
+    "f = lambda x: x+2\n",
     "b = []\n",
     "def modify_list(lst, fudduLambda):\n",
     "    for x in ####:\n",
     "        b.append(#####(x))\n",
     "#Call modify_list(##,##)\n",
     "#print b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lst = list(range(1,11))\n",
+    "f = lambda x: x+2\n",
+    "b = []\n",
+    "\n",
+    "def modify_list(lst, fudduLambda):\n",
+    "    for x in lst:\n",
+    "        b.append(lst(x))\n",
+    "    return(b)\n",
+    "b"
    ]
   },
   {
@@ -59,12 +85,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here:\n",
-    "\n"
+    "z= lambda a:a+ 243.15\n",
+    "z(10)"
    ]
   },
   {
@@ -76,13 +103,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "temps = [12, 23, 38, -55, 24]\n",
-    "\n",
-    "# Your code here:"
+    "a=[i+243.15 for i in temps]\n",
+    "a\n"
    ]
   },
   {
@@ -96,11 +123,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n",
+    "mod=lambda a,b: \"1\" if a%b==0 else \"0\"\n",
+    "\n",
+    "mod(2,2)"
    ]
   },
   {
@@ -114,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,8 +154,9 @@
     "    input: a number\n",
     "    output: a function that returns 1 if the number is divisible by another number (to be passed later) and zero otherwise\n",
     "    \"\"\"\n",
-    "    \n",
-    "    # Your code here:"
+    "    if b%input(int())==0:\n",
+    "        return(1)\n",
+    "divisor(12)"
    ]
   },
   {
@@ -136,11 +168,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "def divisor(b):\n",
+    "\n",
+    "    if b%input(int())==0:\n",
+    "        return(1)\n",
+    "    else:\n",
+    "        return(0)\n",
+    "divisor(5)"
    ]
   },
   {
@@ -152,10 +190,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "def divisible5(a):\n",
+    "\n",
+    "    if a%5==0:\n",
+    "        return(1)\n",
+    "    else:\n",
+    "        return(0)\n",
+    "\n",
     "divisible5(10)"
    ]
   },
@@ -183,23 +239,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('Green', 'eggs'),\n",
-       " ('cheese', 'cheese'),\n",
-       " ('English', 'cucumber'),\n",
-       " ('tomato', 'tomato')]"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "list1 = ['Green', 'cheese', 'English', 'tomato']\n",
     "list2 = ['eggs', 'cheese', 'cucumber', 'tomato']\n",
@@ -218,14 +260,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list1 = [1,2,3,4]\n",
     "list2 = [2,3,4,5]\n",
-    "## Zip the lists together \n",
-    "## Print the zipped list "
+    "wip= zip(list1,list2)\n",
+    "list(wip)\n",
+    "p=lambda a,b: a>b\n",
+    "p(list1,list2)"
    ]
   },
   {
@@ -237,28 +292,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'\\n\\ncompare = lambda ###: print(\"True\") if ### else print(\"False\")\\nfor ### in zip(list1,list2):\\n    compare(###)\\n    \\n'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "None\n",
+      "False\n",
+      "None\n",
+      "False\n",
+      "None\n",
+      "False\n",
+      "None\n"
+     ]
     }
    ],
    "source": [
-    "'''\n",
     "\n",
-    "compare = lambda ###: print(\"True\") if ### else print(\"False\")\n",
-    "for ### in zip(list1,list2):\n",
-    "    compare(###)\n",
+    "compare = lambda a,b: print(\"True\") if a > b else print(\"False\")\n",
+    "for i in zip(list1,list2):\n",
+    "    print(compare(list1,list2))\n",
     "    \n",
-    "'''    "
+    "    "
    ]
   },
   {
@@ -274,14 +332,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Engineering', 'Lab'),\n",
+       " ('Computer Science', 'Homework'),\n",
+       " ('Political Science', 'Essay'),\n",
+       " ('Mathematics', 'Module')]"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list1 = ['Engineering', 'Computer Science', 'Political Science', 'Mathematics']\n",
     "list2 = ['Lab', 'Homework', 'Essay', 'Module']\n",
-    "\n",
-    "# Your code here:\n"
+    "dip= zip(list1,list2)\n",
+    "sorted(u lista de zips , key = lambda x: x[1])\n",
+    "# Your code here:\n",
+    "#sorted[1][0]"
    ]
   },
   {
@@ -295,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,18 +391,6 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.3"
   }
  },
  "nbformat": 4,
