--- a/module-1/lab-lambda-functions/your-code/main.ipynb
+++ b/module-1/lab-lambda-functions/your-code/main.ipynb
@@ -34,15 +34,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-2-4136287181e5>, line 5)",
+     "evalue": "invalid syntax (<ipython-input-1-4136287181e5>, line 5)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-2-4136287181e5>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    for x in ####:\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-4136287181e5>\"\u001b[0;36m, line \u001b[0;32m5\u001b[0m\n\u001b[0;31m    for x in ####:\u001b[0m\n\u001b[0m                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -59,19 +59,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "lst = list(range(1,11))\n",
     "f = lambda x: x+2\n",
-    "b = []\n",
-    "\n",
+    "b= []\n",
     "def modify_list(lst, fudduLambda):\n",
-    "    for x in lst:\n",
-    "        b.append(lst(x))\n",
+    "    for i in lst:\n",
+    "        b.append(lst(i))\n",
     "    return(b)\n",
     "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 4, 5, 6, 7, 8, 9, 10, 11, 12]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lst = list(range(1,11))\n",
+    "c = [i+2 for i in lst]\n",
+    "c"
    ]
   },
   {
@@ -85,9 +117,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "253.15"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
     "z= lambda a:a+ 243.15\n",
@@ -103,9 +146,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[255.15, 266.15, 281.15, 188.15, 267.15]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "temps = [12, 23, 38, -55, 24]\n",
     "a=[i+243.15 for i in temps]\n",
@@ -123,9 +177,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here:\n",
     "\n",
@@ -149,14 +214,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def divisor(b):\n",
-    "    \"\"\"\n",
-    "    input: a number\n",
-    "    output: a function that returns 1 if the number is divisible by another number (to be passed later) and zero otherwise\n",
-    "    \"\"\"\n",
-    "    if b%input(int())==0:\n",
+    "def divisor(b,c):\n",
+    "\n",
+    "    if b%c==0:\n",
     "        return(1)\n",
-    "divisor(12)"
+    "    else:\n",
+    "        return(0)\n",
+    "    \n",
+    "divisor(5,2)\n",
+    "#'''def divisor(b):\n",
+    "\n",
+    " #   if b%input(int())==0:\n",
+    " #       return(1)\n",
+    "#    else:\n",
+    "#        return(0)\n",
+    "    \n",
+    "#divisor(5)'''\n"
    ]
   },
   {
@@ -168,17 +241,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def divisor(b):\n",
+    "def divisible5(a):\n",
     "\n",
-    "    if b%input(int())==0:\n",
+    "    if a%5==0:\n",
     "        return(1)\n",
     "    else:\n",
-    "        return(0)\n",
-    "divisor(5)"
+    "        return(0)"
    ]
   },
   {
@@ -190,13 +262,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
        "1"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "divisible5(10)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
       ]
      },
      "execution_count": 9,
@@ -205,23 +301,7 @@
     }
    ],
    "source": [
-    "def divisible5(a):\n",
-    "\n",
-    "    if a%5==0:\n",
-    "        return(1)\n",
-    "    else:\n",
-    "        return(0)\n",
-    "\n",
-    "divisible5(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "divisible5(8)"
+    "divisible5(8)\n"
    ]
   },
   {
@@ -260,20 +340,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "list1 = [1,2,3,4]\n",
     "list2 = [2,3,4,5]\n",
@@ -292,24 +361,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "False\n",
-      "None\n",
-      "False\n",
-      "None\n",
-      "False\n",
-      "None\n",
-      "False\n",
-      "None\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "compare = lambda a,b: print(\"True\") if a > b else print(\"False\")\n",
@@ -332,28 +386,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('Engineering', 'Lab'),\n",
-       " ('Computer Science', 'Homework'),\n",
-       " ('Political Science', 'Essay'),\n",
-       " ('Mathematics', 'Module')]"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "list1 = ['Engineering', 'Computer Science', 'Political Science', 'Mathematics']\n",
     "list2 = ['Lab', 'Homework', 'Essay', 'Module']\n",
     "dip= zip(list1,list2)\n",
-    "sorted(u lista de zips , key = lambda x: x[1])\n",
+    "sorted(dip, key = lambda x: x[1])\n",
     "# Your code here:\n",
     "#sorted[1][0]"
    ]
@@ -383,6 +423,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
@@ -391,6 +440,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
